--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
     <script src="pages/home/home-factory.js"></script>
     <script src="pages/home/post-types/text/text-directive.js"></script>
     <script src="pages/home/post-types/image/image-directive.js"></script>
+    <script src="pages/home/post-types/audio/audio-directive.js"></script>
 
     <!--libraries-->
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
