--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -22,10 +22,12 @@
       </div>
     </div>
     <div class="list">
-       <div ng-repeat="p in vm.feeds" ng-switch on="p.post.post_type">
+      <div ng-repeat="p in vm.feeds" ng-switch on="p.post.post_type">
         <text-post ng-switch-when="text" post="p.post"></text-post>
         <image-post ng-switch-when="images" post="p.post"></image-post>
         <audio-post ng-switch-when="audio" post="p.post"></audio-post>
+        <attachment-post ng-switch-when="attachment" post="p.post"></attachment-post>
+        <video-post ng-switch-when="video" post="p.post"></video-post>
       </div>
     </div>
    
