--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,8 @@
     <script src="pages/home/post-types/text/text-directive.js"></script>
     <script src="pages/home/post-types/image/image-directive.js"></script>
     <script src="pages/home/post-types/audio/audio-directive.js"></script>
+    <script src="pages/home/post-types/attachment/attachment-directive.js"></script>
+    <script src="pages/home/post-types/video/video-directive.js"></script>
 
     <!--libraries-->
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
