--- a/www/pages/home/post-types/video/video.html
+++ b/www/pages/home/post-types/video/video.html
@@ -8,11 +8,10 @@
     <div class="item item-text-wrap" ng-if="vm.post.text_body !== ''">
         {{vm.post.text_body}}
     </div>
-    <div class="item item-icon-left" ng-repeat="file in vm.post.files">
-        <i class="icon ion-headphone"></i>
-        <audio controls>
-            <source ng-src="{{vm.trustSrc(vm.apiurl+'uploads/media/'+file.file_path)}}">
-        </audio>
+    <div ng-repeat="file in vm.post.files">
+        <video controls width="100%">
+            <source ng-src="{{vm.trustSrc(vm.apiurl+'uploads/videos/'+file.file_path+'.'+file.attributes.ext)}}">
+        </video>
     </div>
     <div id="home-button-bar2" class="button-bar">
         <button id="home-button19" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-thumbsup">Like</button>
