--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,9 @@
     <script src="app/routes.js"></script>
     <script src="pages/signin/signin-ctrl.js"></script>
     <script src="pages/signin/signin-factory.js"></script>
+    <script src="pages/friends/friends-ctrl.js"></script>
+    <script src="pages/notifications/notifications-ctrl.js"></script>
+    <script src="pages/messages/messages-ctrl.js"></script>
     <script src="pages/signup/registration-ctrl.js"></script>
     <script src="pages/signup/registration-factory.js"></script>
     <script src="pages/forgot-pass/forgot-pass-ctrl.js"></script>
