--- a/www/pages/tabs.html
+++ b/www/pages/tabs.html
@@ -9,16 +9,16 @@
       </ion-nav-buttons>
     </ion-nav-bar>
   <ion-tabs class="tabs-light tabs-icon-only">
-    <ion-tab title="Home" icon="ion-home" href="#/tabs/home">
+    <ion-tab title="Home" icon="ion-home" href="#/app/tabs/home">
       <ion-nav-view name="tab1"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Notifications" icon="ion-ios-bell" href="#/tabs/notifications">
+    <ion-tab title="Notifications" icon="ion-ios-bell" href="#/app/tabs/notifications">
       <ion-nav-view name="tab2"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Friends" icon="ion-ios-people" href="#/tabs/friends">
+    <ion-tab title="Friends" icon="ion-ios-people" href="#/app/tabs/friends">
       <ion-nav-view name="tab3"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Messages" icon="ion-email" href="#/tabs/messages">
+    <ion-tab title="Messages" icon="ion-email" href="#/app/tabs/messages">
       <ion-nav-view name="tab4"></ion-nav-view>
     </ion-tab>
   </ion-tabs>
