--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -21,15 +21,49 @@
         <ion-item menu-close ui-sref="app.tabs.home">
           Home
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item menu-close ui-sref="app.tabs.home">
+          All Connections
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Messages
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Pages
         </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Groups
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Classrooms
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Tasks
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Blog
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Polls
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Events
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          My Gifts
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Games/Apps
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Generate CV
+        </ion-item>
+        <ion-item menu-close ui-sref="app.tabs.home">
+          Settings
+        </ion-item>
+        <ion-item menu-close ng-click="logout()">
+          Logout
+        </ion-item>
+       
       </ion-list>
     </ion-content>
   </ion-side-menu>
