--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -13,13 +13,11 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
+    <ion-header-bar class="bar-stable">
+      <h1 class="title">Left</h1>
+    </ion-header-bar>
     <ion-content>
       <ion-list>
-        <div class="item item-avatar">
-          <img ng-src="{{vm.apiurl}}{{vm.user.token.profileAvatar}}" alt="">
-          <h2>{{vm.user.token.full_name}}</h2>
-          <p>{{vm.user.token.location.city}}</p>
-        </div>
         <ion-item menu-close ui-sref="app.tabs.home">
           Home
         </ion-item>
