--- a/www/pages/signin/signin.html
+++ b/www/pages/signin/signin.html
@@ -1,5 +1,5 @@
-<ion-view title="signin" hide-nav-bar="true" hide-back-button="true" id="page4" style="background-color:#029D9A;">
-  <ion-content padding="true" class="manual-ios-statusbar-padding" scroll="false">
+<ion-view title="signin" hide-nav-bar="true" hide-back-button="true" id="page4" >
+  <ion-content padding="true" class="manual-ios-statusbar-padding background" scroll="false">
     <div class="spacer" style="width: 300px; height: 25px;"></div>
     <div>
       <img src="img/freemig-logo.png" style="display: block; width: 20%; height: auto; margin-left: auto; margin-right: auto;">
@@ -14,7 +14,7 @@
       </label>
       <button ng-click="vm.signin()" id="signin-button2" class="button button-positive  button-block">Sign In</button>
     </form>
-    
+
     <div id="signin-button-bar1" class="button-bar">
       <button ui-sref="signup" id="signin-button6" class="button button-light button-small button-block button-clear">Create Account</button>
       <button ui-sref="forgot-pass" id="signin-button7" class="button button-light button-small button-block button-clear">Forgot Password?</button>
