--- a/www/pages/home/post-types/image/image.html
+++ b/www/pages/home/post-types/image/image.html
@@ -9,7 +9,7 @@
         {{vm.post.text_body}}
     </div>
     <div class="item item-image" ng-repeat="image in vm.post.files">
-        <img ng-src="{{vm.apiurl}}uploads/images/{{image.file_path}}">
+        <img ng-src="{{vm.apiurl}}/uploads/images/{{image.file_path}}">
     </div>
     <div id="home-button-bar2" class="button-bar">
         <button id="home-button19" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-thumbsup">Like</button>
