--- a/www/pages/home/post-types/audio/audio.html
+++ b/www/pages/home/post-types/audio/audio.html
@@ -11,7 +11,7 @@
     <div class="item item-icon-left" ng-repeat="file in vm.post.files">
         <i class="icon ion-headphone"></i>
         <audio controls>
-            <source ng-src="{{vm.trustSrc(vm.apiurl+'uploads/media/'+file.file_path)}}">
+            <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/media/'+file.file_path)}}">
         </audio>
     </div>
     <div id="home-button-bar2" class="button-bar">
