--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="false" cache-view="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -13,9 +13,9 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-content>
+    <ion-content > 
       <ion-list>
-        <div ng-show="isLoggedin" class="item item-avatar">
+        <div class="item item-avatar">
           <img ng-src="{{vm.apiurl}}{{vm.user.token.profileAvatar}}">
           <h2>{{vm.user.token.full_name}}</h2>
           <p>{{vm.user.token.location.city}}</p>
