--- a/www/pages/signin/signin.html
+++ b/www/pages/signin/signin.html
@@ -2,7 +2,7 @@
   <ion-content padding="true" class="manual-ios-statusbar-padding background" scroll="false">
     <div class="spacer" style="width: 300px; height: 25px;"></div>
     <div>
-      <img src="img/freemig-logo.png" style="display: block; width: 20%; height: auto; margin-left: auto; margin-right: auto;">
+      <img src="img/freemig_icon.png" style="display: block; width: 25%; height: auto; margin-left: auto; margin-right: auto; margin-bottom:30px; margin-top:30px">
     </div>
     <div class="spacer" style="width: 300px; height: 25px;"></div>
     <form name="signinForm" novalidate id="signin-form1" class="list">
@@ -12,7 +12,7 @@
       <label class="item item-input" id="signin-input2">
         <input name="password" type="password" placeholder="Password" ng-model="vm.signinData.password">
       </label>
-      <button ng-click="vm.signin()" id="signin-button2" class="button button-positive  button-block">Sign In</button>
+      <button ng-click="vm.signin()" id="signin-button2" class="button button-light  button-block">Sign In</button>
     </form>
 
     <div id="signin-button-bar1" class="button-bar">
