--- a/www/pages/signup/registration.html
+++ b/www/pages/signup/registration.html
@@ -1,5 +1,5 @@
-<ion-view title="signup" hide-nav-bar="true" hide-back-button="true" id="page7" style="background-color:#029D9A;">
-  <ion-content padding="true" class="manual-ios-statusbar-padding" scroll="false">
+<ion-view title="signup" hide-nav-bar="true" hide-back-button="true" id="page7">
+  <ion-content padding="true" class="manual-ios-statusbar-padding background" scroll="false">
 
     <ion-slides disable-side-menu-drag="" options="{'loop': true}" slider="slider3" delegate-handle="slider3" id="signup-slider3"
       style="width:100%;height:100%;">
@@ -11,7 +11,7 @@
 
         <div class="spacer" style="width: 300px; height: 25px;"></div>
         <div>
-          <img src="img/freemig-logo.png" style="display: block; width: 20%; height: auto; margin-left: auto; margin-right: auto;">
+          <img src="img/freemig_icon.png" style="display: block; width: 25%; height: auto; margin-left: auto; margin-right: auto; margin-bottom:30px; margin-top:30px">
         </div>
         <div class="spacer" style="width: 300px; height: 25px;"></div>
 
@@ -44,9 +44,9 @@
               <p ng-message="required">* Password is required</p>
               <p ng-message="minlength">* Password must be 8 characters long</p>
             </div>-->
-            <button ng-disabled="page1Form.$invalid" id="signup-button15" class="button button-positive  button-block" ng-click="vm.nextSlide()">Next</button>
+            <button ng-disabled="page1Form.$invalid" id="signup-button15" class="button button-light  button-block" ng-click="vm.nextSlide()">Next</button>
           </form>
-          
+
 
         </div>
 
@@ -69,7 +69,7 @@
       <ion-slide-page id="signup-slide214">
         <div class="spacer" style="height: 25px;"></div>
         <div>
-          <img src="img/freemig-logo.png" style="display: block; width: 20%; height: auto; margin-left: auto; margin-right: auto;">
+          <img src="img/freemig_icon.png" style="display: block; width: 25%; height: auto; margin-left: auto; margin-right: auto; margin-bottom:30px; margin-top:30px;">
         </div>
         <div class="spacer" style="height: 25px;"></div>
         <div id="signup-div10" class="list">
@@ -86,7 +86,7 @@
       <ion-slide-page id="signup-slide215">
         <div class="spacer" style="width: 300px; height: 25px;"></div>
         <div>
-          <img src="img/freemig-logo.png" style="display: block; width: 20%; height: auto; margin-left: auto; margin-right: auto;">
+          <img src="img/freemig_icon.png" style="display: block; width: 25%; height: auto; margin-left: auto; margin-right: auto; margin-bottom:18px; margin-top:18px;">
         </div>
         <div class="spacer" style="width: 300px; height: 25px;"></div>
         <div id="signup-div11" class="list">
@@ -107,7 +107,7 @@
             <label class="item item-input" id="signup-input31" name="phone">
               <input type="tel" placeholder="Phone Number" ng-model="vm.signupData.phone">
             </label>
-            <div class="row row-no-padding">
+            <div class="row row-no-padding" style="margin:15px;">
               <div class="col">
                 <input type="radio" name="gender" ng-model="vm.signupData.gender" value="1"> Male
               </div>
@@ -120,7 +120,7 @@
             </div>
           </form>
         </div>
-        <div id="signup-button-bar9" class="button-bar">
+        <div id="signup-button-bar9" class="button-bar" style="margin-top:-20px;">
           <button id="signup-button36" class="button button-stable button-small button-block" ng-click="vm.prevSlide()">Back</button>
           <button ng-click="vm.signup()" id="signup-button37" class="button button-balanced button-small button-block">Complete</button>
         </div>
