--- a/www/pages/forgot-pass/forgot-pass.html
+++ b/www/pages/forgot-pass/forgot-pass.html
@@ -1,8 +1,8 @@
-<ion-view title="forgot-pass" hide-nav-bar="true" hide-back-button="true" id="page6" style="background-color:#029D9A;">
-  <ion-content padding="true" class="manual-ios-statusbar-padding" scroll="false">
+<ion-view title="forgot-pass" hide-nav-bar="true" hide-back-button="true" id="page6" >
+  <ion-content padding="true" class="manual-ios-statusbar-padding background" scroll="false">
     <div class="spacer" style="width: 300px; height: 25px;"></div>
     <div>
-      <img src="img/freemig-logo.png" style="display: block; width: 20%; height: auto; margin-left: auto; margin-right: auto;">
+      <img src="img/freemig_icon.png" style="display: block; width: 25%; height: auto; margin-left: auto; margin-right: auto; margin-top:30px; margin-bottom:30px;">
     </div>
     <div class="spacer" style="width: 300px; height: 25px;"></div>
     <form id="forgotPass-form4" class="list">
@@ -10,7 +10,7 @@
         <input type="text" placeholder="Username/Email">
       </label>
     </form>
-    <button id="forgotPass-button12" class="button button-positive  button-block">Submit</button>
+    <button id="forgotPass-button12" class="button button-light  button-block">Submit</button>
     <div id="forgotPass-button-bar3" class="button-bar">
       <button ui-sref="signup" id="forgotPass-button13" class="button button-light button-small button-block button-clear">Create Account</button>
       <button ui-sref="signin" id="forgotPass-button14" class="button button-light button-small button-block button-clear">Sign In</button>
