--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
     <!--libraries-->
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
     <script src="lib/ngstorage/ngStorage.min.js"></script>
+    <script src="lib/hls/hls.min.js"></script>
 
 
 
