--- a/www/pages/home/post-types/video/video.html
+++ b/www/pages/home/post-types/video/video.html
@@ -9,8 +9,11 @@
         {{vm.post.text_body}}
     </div>
     <div ng-repeat="file in vm.post.files">
-        <video controls width="100%">
+        <video ng-if="file.is_active == 2" controls width="100%" ng-poster="{{vm.apiurl+'/uploads/videos/thumbs/'+file.file_path+'.png'}}">
             <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/videos/'+file.file_path+'.'+file.attributes.ext)}}">
+        </video>
+        <video ng-if="file.is_active == 1" ng-click="vm.startThisVideo(this)" controls width="100%" ng-attr-poster="{{vm.apiurl + '/uploads/videos/thumbs/' + file.file_path + '.png'}}">
+            <source ng-src="{{vm.trustSrc(vm.apiurl + '/uploads/videos/' + file.file_path + '.mp4-segment/' + file.file_path + '.m3u8')}}">
         </video>
     </div>
     <div id="home-button-bar2" class="button-bar">
