--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -8,9 +8,13 @@
     <div class="item item-text-wrap">
         <p style="white-space:normal;">{{vm.post.text_body}}</p>
     </div>
-    <div id="home-button-bar2" class="button-bar">
-        <button id="home-button19" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-thumbsup">Like</button>
-        <button id="home-button22" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-chatbox">Comments</button>
-        <button id="home-button23" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-android-share-alt">Share</button>
+    <div id="home-button-bar2" class="button-bar" >
+
+
+        <a id="home-button19" class="button button-small icon-left ion-thumbsup">Like</a>
+        <a id="home-button22" class="button button-small icon-left ion-chatbox">Comments</a>
+        <a id="home-button23" class="button button-small icon-left ion-android-share-alt">Share</a>
+        <!-- <a><button id="home-button22" style="font-weight:lighter;" class="button icon-left ion-chatbox">Comments</button></a>
+        <a><button id="home-button23" style="font-weight:lighter;" class="button icon-left ion-android-share-alt">Share</button></a> -->
     </div>
 </div>
