--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -8,22 +8,16 @@
     <div class="item item-text-wrap" ng-if="vm.post.text_body !== ''">
         {{vm.post.text_body}}
     </div>
-<<<<<<< HEAD
-    <div id="home-button-bar2" class="button-bar" >
+    
 
 
-        <a id="home-button19" class="button button-small icon-left ion-thumbsup">Like</a>
-        <a id="home-button22" class="button button-small icon-left ion-chatbox">Comments</a>
-        <a id="home-button23" class="button button-small icon-left ion-android-share-alt">Share</a>
-        <!-- <a><button id="home-button22" style="font-weight:lighter;" class="button icon-left ion-chatbox">Comments</button></a>
-        <a><button id="home-button23" style="font-weight:lighter;" class="button icon-left ion-android-share-alt">Share</button></a> -->
-=======
     <!--youtube video section-->
+
     <div ng-if="vm.yvideo">
         <iframe width="100%" ng-src="{{vm.trustSrc(vm.post.iframe)}}"></iframe>
         <div class="item item-text-wrap">
             <h2>{{vm.post.urlData.title}}</h2>
-            <p>{{vm.post.urlData.description}}</p> 
+            <p>{{vm.post.urlData.description}}</p>
         </div>
     </div>
     <!--youtube video section-->
@@ -32,7 +26,7 @@
         <iframe width="100%" ng-src="{{vm.trustSrc(vm.post.iframe)}}"></iframe>
         <div class="item item-text-wrap">
             <h2>{{vm.post.urlData.title}}</h2>
-            <p>{{vm.post.urlData.description}}</p> 
+            <p>{{vm.post.urlData.description}}</p>
         </div>
     </div>
     <!--vimeo video section-->
@@ -43,14 +37,20 @@
         </div>
         <div class="item item-text-wrap">
             <h2>{{vm.post.urlData.title}}</h2>
-            <p>{{vm.post.urlData.description}}</p> 
+            <p>{{vm.post.urlData.description}}</p>
         </div>
     </div>
     <!--not video section-->
-    <div id="home-button-bar2" class="button-bar">
-        <button id="home-button19" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-thumbsup">Like</button>
-        <button id="home-button22" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-chatbox">Comments</button>
-        <button id="home-button23" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-android-share-alt">Share</button>
->>>>>>> 11e90ab4599ddcaab0b8f49648396ac015252a4b
-    </div>
+
+
+
+    <div id="home-button-bar2" class="button-bar" >
+
+        <a id="home-button19" class="button button-block button-small icon-left ion-thumbsup" >Like</a>
+        <a id="home-button22" class="button button-block button-small icon-left ion-chatbox">Comments</a>
+        <a id="home-button23" class="button button-block button-small icon-left ion-android-share-alt">Share</a>
+
+   </div>
+
+
 </div>
