--- a/www/pages/home/post-types/attachment/attachment.html
+++ b/www/pages/home/post-types/attachment/attachment.html
@@ -9,8 +9,7 @@
         {{vm.post.text_body}}
     </div>
     <div class="item item-icon-left" ng-repeat="file in vm.post.files">
-        <i class="icon ion-headphone"></i>
-        
+        <img ng-src="{{vm.trustSrc(vm.apiurl+'/defaultMedia/document/'+file.attributes.ext+'.svg')}}">
     </div>
     <div id="home-button-bar2" class="button-bar">
         <button id="home-button19" style="font-weight:lighter;" class="button button-stable button-small button-block icon ion-thumbsup">Like</button>
