--- a/www/pages/tabs.html
+++ b/www/pages/tabs.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-nav-bar class="bar-stable">
+  <ion-nav-bar class="bar-positive">
 
       <ion-nav-back-button>
       </ion-nav-back-button>
