--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/plug.ionic-segment/dist/segment.css" media="all" rel="stylesheet" type="text/css">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -50,11 +51,13 @@
     <script src="pages/home/post-types/audio/audio-directive.js"></script>
     <script src="pages/home/post-types/attachment/attachment-directive.js"></script>
     <script src="pages/home/post-types/video/video-directive.js"></script>
+    <script src="pages/home/post-types/album/album-directive.js"></script>
 
     <!--libraries-->
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
     <script src="lib/ngstorage/ngStorage.min.js"></script>
     <script src="lib/hls/hls.min.js"></script>
+    <script src="lib/plug.ionic-segment/dist/plug.ionic-segment.js"></script>
 
 
 
