--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -34,6 +34,7 @@
         <audio-post ng-switch-when="audio" post="p.post"></audio-post>
         <attachment-post ng-switch-when="attachment" post="p.post"></attachment-post>
         <video-post ng-switch-when="video" post="p.post"></video-post>
+        <album-post ng-switch-when="album" post="p.post"></album-post>
       </div>
     </ion-list>
    
