--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -8,7 +8,7 @@
     <div class="item item-text-wrap" ng-if="vm.post.text_body !== ''">
         {{vm.post.text_body}}
     </div>
-    
+
 
 
     <!--youtube video section-->
@@ -46,8 +46,8 @@
 
     <div id="home-button-bar2" class="button-bar" >
 
-        <a id="home-button19" class="button button-block button-small icon-left ion-thumbsup" >Like</a>
-        <a id="home-button22" class="button button-block button-small icon-left ion-chatbox">Comments</a>
+        <a id="home-button19" class="button button-block button-small icon-left ion-android-favorite" >Like</a>
+        <a id="home-button22" class="button button-block button-small icon-left ion-chatboxes">Responses</a>
         <a id="home-button23" class="button button-block button-small icon-left ion-android-share-alt">Share</a>
 
    </div>
