--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -1,11 +1,23 @@
 <ion-view title="Home" ng-cloak >
+
+  <div class="bar bar-subheader bar-stable">
+      <ion-segment ng-model="feedType" full="true" positive>
+        <ion-segment-button value="'1''" ng-click="vm.changeFeedType(1)">
+          Regular
+        </ion-segment-button>
+        <ion-segment-button value="'2''" ng-click="vm.changeFeedType(2)">
+          Professional
+        </ion-segment-button>
+    </ion-segment>
+  </div>
   
-  <ion-content padding="true" class="has-header" scroll="true">
+  <ion-content padding="true" class="has-subheader">
 
     <ion-refresher
       pulling-text="Pull to refresh..."
       on-refresh="vm.doRefresh()">
     </ion-refresher>
+    
 
     <div class="list card" id="home-card23">
       <ion-item class="item-avatar item-icon-right" id="home-list-item11">
