--- a/www/pages/signup/registration.html
+++ b/www/pages/signup/registration.html
@@ -44,7 +44,7 @@
               <p ng-message="required">* Password is required</p>
               <p ng-message="minlength">* Password must be 8 characters long</p>
             </div>-->
-            <button ng-disabled="page1Form.$invalid" id="signup-button15" class="button button-light  button-block" ng-click="vm.nextSlide()">Next</button>
+            <button ng-disabled="page1Form.$invalid"  class="button button-light  button-block" style="border-radius: 25px;" ng-click="vm.nextSlide()">Next</button>
           </form>
 
 
