--- a/www/pages/forgot-pass/forgot-pass.html
+++ b/www/pages/forgot-pass/forgot-pass.html
@@ -5,15 +5,27 @@
       <img src="img/freemig_icon.png" style="display: block; width: 25%; height: auto; margin-left: auto; margin-right: auto; margin-top:30px; margin-bottom:30px;">
     </div>
     <div class="spacer" style="width: 300px; height: 25px;"></div>
+
     <form id="forgotPass-form4" class="list">
-      <label class="item item-input" id="forgotPass-input9" name="username">
-        <input type="text" placeholder="Username/Email">
+
+      <label class="item item-input item-floating-label " id="signin-input1">
+          <span class="input-label" style="color:#DDDDDD;">Email</span>
+          <input type="text" placeholder="Email" style="color:white;padding-bottom:20px;font-size:15px">
       </label>
+
+      <!-- <label class="item item-input" name="username">
+        <input type="text" placeholder="Username/Email">
+      </label> -->
+
     </form>
-    <button id="forgotPass-button12" class="button button-light  button-block">Submit</button>
+
+    <button  class="button button-light  button-block" style="border-radius: 25px;">Submit</button>
+
     <div id="forgotPass-button-bar3" class="button-bar">
       <button ui-sref="signup" id="forgotPass-button13" class="button button-light button-small button-block button-clear">Create Account</button>
       <button ui-sref="signin" id="forgotPass-button14" class="button button-light button-small button-block button-clear">Sign In</button>
     </div>
+
   </ion-content>
+
 </ion-view>
