--- a/www/index.html
+++ b/www/index.html
@@ -16,16 +16,13 @@
       }
     </script>-->
 
-
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link href="lib/plug.ionic-segment/dist/segment.css" media="all" rel="stylesheet" type="text/css">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
->>>>>>> 966e1fd4ae81b0fec0b8b6a69fa4227d142d6e9e
+    <!-- compiled css output -->
+
     <link href="css/ionic.app.css" rel="stylesheet">
 
-    <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
