updated menu icons

--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -21,7 +21,7 @@
           <p>{{vm.user.token.location.city}}</p>
         </div>
 
-        <a class="item item-icon-left" href="#"><i class="icon ion-email"></i>Check mail</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-email"></i>Check mail</a>
 
         <ion-item menu-close ui-sref="app.tabs.home">Home</ion-item>
 
