adding icons in menu

--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -21,33 +21,31 @@
           <p>{{vm.user.token.location.city}}</p>
         </div>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-email"></i>Check mail</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-home"></i>Home</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Home</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-android-wifi"></i>All Connections</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">All Connections</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-chatbubbles"></i>Messages</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Messages</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-browsers"></i>Pages</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Pages</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-people"></i>Groups</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Groups</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-easel"></i>Classrooms</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Classrooms</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-compose"></i>Tasks</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Tasks</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-edit"></i>Blogs</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Blog</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-chatbubbles"></i>Pulls</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Polls</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-calendar"></i>Events</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Events</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-flower"></i>My Gifts</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">My Gifts</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-gear-a"></i>Settings</a>
 
-        <ion-item menu-close ui-sref="app.tabs.home">Settings</ion-item>
-
-        <ion-item menu-close ng-click="vm.logout()">Logout</ion-item>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-log-out"></i>Logout</a>
 
       </ion-list>
     </ion-content>
