--- a/www/pages/forgot-pass/forgot-pass.html
+++ b/www/pages/forgot-pass/forgot-pass.html
@@ -9,8 +9,8 @@
     <form id="forgotPass-form4" class="list">
 
       <label class="item item-input item-floating-label " id="signin-input1">
-          <span class="input-label" style="color:#DDDDDD;">Email</span>
-          <input type="text" placeholder="Email" style="color:white;padding-bottom:20px;font-size:15px">
+          <span class="input-label" style="color:#DDDDDD;font-size:10px">Email</span>
+          <input type="text" placeholder="Email" style="color:white;padding-bottom:20px;font-size:17px">
       </label>
 
       <!-- <label class="item item-input" name="username">
