--- a/www/pages/signin/signin.html
+++ b/www/pages/signin/signin.html
@@ -10,14 +10,14 @@
     <form name="signinForm" novalidate id="signin-form1" class="list ">
 
       <label class="item item-input item-floating-label " id="signin-input1">
-          <span class="input-label" style="color:#DDDDDD;">User Name</span>
-          <input type="text" placeholder="User Name" style="color:white;padding-bottom:20px;font-size:15px" ng-model="vm.signinData.username">
+          <span class="input-label" style="color:#DDDDDD; font-size:10px">User Name</span>
+          <input type="text" placeholder="User Name" style="color:white;padding-bottom:20px;font-size:17px;" ng-model="vm.signinData.username">
       </label>
 
 
       <label class="item item-input item-floating-label" id="signin-input1">
-          <span class="input-label" style="color:#DDDDDD;">Password</span>
-          <input type="password" placeholder="Password" style="color:white;padding-bottom:20px;font-size:15px" ng-model="vm.signinData.password">
+          <span class="input-label" style="color:#DDDDDD; font-size:10px">Password</span>
+          <input type="password" placeholder="Password" style="color:white;padding-bottom:20px;font-size:17px" ng-model="vm.signinData.password">
       </label>
 
 
