--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="lib/plug.ionic-segment/dist/segment.css" media="all" rel="stylesheet" type="text/css">
+    <link href="lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
