--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -21,25 +21,25 @@
           <p>{{vm.user.token.location.city}}</p>
         </div>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-home"></i>Home</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-home" style="color:#11a74a;"></i>Home</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-android-wifi"></i>All Connections</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-users"></i>All Connections</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-chatbubbles"></i>Messages</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-envelope"></i>Messages</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-browsers"></i>Pages</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-leaf"></i>Pages</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-people"></i>Groups</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-crosshairs"></i>Groups</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-easel"></i>Classrooms</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-circle-o-notch"></i>Classrooms</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-compose"></i>Tasks</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-calendar"></i>Tasks</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-edit"></i>Blogs</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-sticky-note"></i>Blogs</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-chatbubbles"></i>Pulls</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-cubes"></i>Polls</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-calendar"></i>Events</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-calendar"></i>Events</a>
 
         <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-flower"></i>My Gifts</a>
 
