updated menu icons

--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -21,31 +21,31 @@
           <p>{{vm.user.token.location.city}}</p>
         </div>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-home" style="color:#11a74a;"></i>Home</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-home" style="color:#11a74a;font-size:20px"></i>Home</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-users"></i>All Connections</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-users"  style="font-size:20px"></i>All Connections</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-envelope"></i>Messages</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-envelope" style="font-size:20px"></i>Messages</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-leaf"></i>Pages</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-leaf" style="font-size:20px"></i>Pages</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-crosshairs"></i>Groups</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-crosshairs" style="font-size:20px"></i>Groups</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-circle-o-notch"></i>Classrooms</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-circle-o-notch" style="font-size:20px"></i>Classrooms</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-calendar"></i>Tasks</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-calendar" style="font-size:20px"></i>Tasks</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-sticky-note"></i>Blogs</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-sticky-note" style="font-size:20px"></i>Blogs</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-cubes"></i>Polls</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-cubes" style="font-size:20px"></i>Polls</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-calendar"></i>Events</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon fa fa-calendar" style="font-size:20px"></i>Events</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-flower"></i>My Gifts</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-ios-flower" style="font-size:20px"></i>My Gifts</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-gear-a"></i>Settings</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-gear-a" style="font-size:20px"></i>Settings</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-log-out"></i>Logout</a>
+        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-log-out" style="font-size:20px"></i>Logout</a>
 
       </ion-list>
     </ion-content>
