--- a/www/pages/tabs.html
+++ b/www/pages/tabs.html
@@ -8,6 +8,10 @@
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
+      <ion-nav-buttons side="right">
+        <button class="button button-icon button-clear ion-person" ui-sref="profile">
+        </button>
+      </ion-nav-buttons>
     </ion-nav-bar>
 
   <ion-tabs class="tabs-light tabs-icon-only freemig-style">
