Mid day april 2

--- a/www/pages/home/post-types/album/album.html
+++ b/www/pages/home/post-types/album/album.html
@@ -19,11 +19,20 @@
         </div>
         
     </div>
-    <div id="home-button-bar2" class="button-bar" >
 
-        <a id="home-button19" class="button button-block button-small icon-left ion-thumbsup" >Like</a>
-        <a id="home-button22" class="button button-block button-small icon-left ion-chatbox">Comments</a>
-        <a id="home-button23" class="button button-block button-small icon-left ion-android-share-alt">Share</a>
-
-   </div>
+    <div class="item tabs tabs-secondary tabs-icon-left white-tabs">
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-thumbsup"></i>
+        Like
+      </a>
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-chatbox"></i>
+        Comment
+      </a>
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-share"></i>
+        Share
+      </a>
+    </div>
+    
 </div>
