--- a/www/pages/home/post-types/image/image.html
+++ b/www/pages/home/post-types/image/image.html
@@ -11,11 +11,20 @@
     <div class="item item-image" ng-repeat="image in vm.post.files">
         <img ng-src="{{vm.apiurl}}/uploads/images/{{image.file_path}}">
     </div>
-    <div id="home-button-bar2" class="button-bar" >
 
-        <a id="home-button19" class="button button-block button-small icon-left ion-thumbsup" >Like</a>
-        <a id="home-button22" class="button button-block button-small icon-left ion-chatbox">Comments</a>
-        <a id="home-button23" class="button button-block button-small icon-left ion-android-share-alt">Share</a>
-
-   </div>
+    <div class="item tabs tabs-secondary tabs-icon-left white-tabs">
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-thumbsup"></i>
+        Like
+      </a>
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-chatbox"></i>
+        Comment
+      </a>
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-share"></i>
+        Share
+      </a>
+    </div>
+    
 </div>
