--- a/www/pages/home/post-types/video/video.html
+++ b/www/pages/home/post-types/video/video.html
@@ -16,11 +16,20 @@
             <source ng-src="{{vm.trustSrc(vm.apiurl + '/uploads/videos/' + file.file_path + '.mp4-segment/' + file.file_path + '.m3u8')}}">
         </video>
     </div>
-    <div id="home-button-bar2" class="button-bar" >
+    
+    <div class="item tabs tabs-secondary tabs-icon-left white-tabs">
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-thumbsup"></i>
+        Like
+      </a>
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-chatbox"></i>
+        Comment
+      </a>
+      <a class="tab-item white-tab-text" href="#">
+        <i class="icon ion-share"></i>
+        Share
+      </a>
+    </div>
 
-        <a id="home-button19" class="button button-block button-small icon-left ion-thumbsup" >Like</a>
-        <a id="home-button22" class="button button-block button-small icon-left ion-chatbox">Comments</a>
-        <a id="home-button23" class="button button-block button-small icon-left ion-android-share-alt">Share</a>
-
-   </div>
 </div>
