--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -31,13 +31,13 @@
           <textarea ng-model="vm.status.text" placeholder="What's on your mind?"></textarea></label>
       </form>
       <div id="home-button-bar1" class="button-bar">
-        <button id="home-button4" style="font-weight:200;font-size:5px;" class="button button-light button-small button-block button-icon no-padding icon ion-camera"></button>
-        <button id="home-button10" style="font-weight:200;font-size:5px;" class="button button-light button-small button-block button-icon no-padding icon ion-happy"></button>
-        <button id="home-button11" style="font-weight:200;font-size:5px;" class="button button-light button-small button-block button-icon no-padding icon ion-location"></button>
-        <button id="home-button12" style="font-weight:200;font-size:5px;" class="button button-light button-small button-block button-icon no-padding icon ion-music-note"></button>
-        <button id="home-button13" style="font-weight:200;font-size:5px;" class="button button-light button-small button-block button-icon no-padding icon ion-videocamera"></button>
-        <button id="home-button14" style="font-weight:200;font-size:5px;" class="button button-light button-small button-block button-icon no-padding icon ion-android-attach"></button>
-        <button ng-click="vm.createPost(vm.status)" style="font-weight:200;font-size:5px;" class="button button-light button-small button-block button-icon no-padding icon ion-android-send"></button>
+        <button class="button button-light button-block button-icon no-padding icon ion-camera"></button>
+        <button class="button button-light button-block button-icon no-padding icon ion-happy"></button>
+        <button class="button button-light button-block button-icon no-padding icon ion-location"></button>
+        <button class="button button-light button-small button-block button-icon no-padding icon ion-music-note"></button>
+        <button class="button button-light button-small button-block button-icon no-padding icon ion-videocamera"></button>
+        <button class="button button-light button-small button-block button-icon no-padding icon ion-android-attach"></button>
+        <button ng-click="vm.createPost(vm.status)" class="button button-light button-block button-icon icon ion-android-send"></button>
       </div>
     </div>
 
