--- a/www/pages/tabs.html
+++ b/www/pages/tabs.html
@@ -9,7 +9,7 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-person" ui-sref="profile">
+        <button class="button button-icon button-clear ion-person" ui-sref="app.profile">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
