--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,8 @@
     <script src="pages/signup/registration-ctrl.js"></script>
     <script src="pages/signup/registration-factory.js"></script>
     <script src="pages/forgot-pass/forgot-pass-ctrl.js"></script>
+    <script src="pages/profile/profile-ctrl.js"></script>
+    <script src="pages/profile/profile-factory.js"></script>
     <script src="pages/home/home-ctrl.js"></script>
     <script src="pages/home/home-factory.js"></script>
     <script src="pages/home/post-types/text/text-directive.js"></script>
