commentout remember me checkbox

--- a/www/pages/signin/signin.html
+++ b/www/pages/signin/signin.html
@@ -32,6 +32,10 @@
 
       <button ng-click="vm.signin()" class="button button-light  button-block" style="border-radius: 25px;">Sign In</button>
 
+     <!-- <div id="remember_me">
+         <label><input type="checkbox" ng-model="checkboxModel.value1">  Remember me</label>
+     </div> -->
+
     </form>
 
     <div id="signin-button-bar1" class="button-bar">
