--- a/www/pages/home/post-types/album/album.html
+++ b/www/pages/home/post-types/album/album.html
@@ -8,13 +8,25 @@
     <div class="item item-text-wrap" ng-if="vm.post.text_body !== ''">
         {{vm.post.text_body}}
     </div>
-    <div class="item item-image" ng-repeat="image in vm.post.files | limitTo:4" ng-switch on="$index % 2">
+
+
+    <div class="item item-image">
         <div class="row row-no-padding">
-            <div class="col" ng-switch-when="0">
-                <img ng-src="{{vm.apiurl}}/uploads/images/{{image.file_path}}">
+            <div class="col album-image album-first-image"  ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[0].file_path}})'}">
             </div>
-            <div class="col" ng-switch-when="0">
-                <img ng-show="vm.post.files[$index+1]" ng-src="{{vm.apiurl}}/uploads/images/{{vm.post.files[$index+1].file_path}}">
+        </div>
+        <div class="row row-no-padding" ng-show="vm.post.files[2]">
+            <div class="col album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[1].file_path}})'}">
+            </div>
+            <div class="col album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[2].file_path}})'}">
+            </div>
+        </div>
+        <div class="row row-no-padding" ng-show="vm.post.files[5]">
+            <div class="col album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[3].file_path}})'}">
+            </div>
+            <div class="col album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[4].file_path}})'}">
+            </div>
+            <div class="col album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[5].file_path}})'}">
             </div>
         </div>
         
