--- a/www/pages/friends/friends.html
+++ b/www/pages/friends/friends.html
@@ -1,4 +1,16 @@
 <ion-view title="Friends" ng-cloak>
+
+  <ion-nav-bar class="bar-positive">
+
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+
+    <ion-nav-buttons side="left">
+      <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        </button>
+    </ion-nav-buttons>
+
+  </ion-nav-bar>
   
   <ion-content padding="true" class="has-header">
 
