--- a/www/pages/notifications/notifications.html
+++ b/www/pages/notifications/notifications.html
@@ -1,9 +1,21 @@
 <ion-view title="Notifications" ng-cloak>
-  
+
+  <ion-nav-bar class="bar-positive">
+
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+
+    <ion-nav-buttons side="left">
+      <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        </button>
+    </ion-nav-buttons>
+
+  </ion-nav-bar>
+
   <ion-content padding="true" class="has-header">
 
-   
-    
-   
+
+
+
   </ion-content>
 </ion-view>
