--- a/www/pages/profile/profile.html
+++ b/www/pages/profile/profile.html
@@ -1,5 +1,26 @@
 <ion-view title="Profile">
-  <ion-content padding="true" scroll="true">
-    hello
+
+  <ion-nav-bar class="bar-positive">
+
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+
+    <ion-nav-buttons side="left">
+      <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        </button>
+    </ion-nav-buttons>
+
+  </ion-nav-bar>
+
+
+  <ion-content padding="false" scroll="true">
+    <div class="row row-no-padding">
+      <div class="col">
+        <img ng-src="{{vm.apirul}}{{vm.user.profileAvatar}}">
+      </div>
+    </div>
   </ion-content>
+
+
+
 </ion-view>
