--- a/www/pages/home/post-types/image/image.html
+++ b/www/pages/home/post-types/image/image.html
@@ -3,7 +3,7 @@
         <img ng-src="{{vm.apiurl}}{{vm.post.owner_info.avatar}}">
         <h2>{{vm.post.owner_info.full_name}}</h2>
         <p style="white-space:normal;">{{vm.post.created_at.diffForHumans}}</p>
-        <i class="icon ion-ios-arrow-down"></i>
+        
     </ion-item>
     <div class="item item-text-wrap" ng-if="vm.post.text_body !== ''">
         {{vm.post.text_body}}
@@ -12,19 +12,11 @@
         <img ng-src="{{vm.apiurl}}/uploads/images/{{image.file_path}}">
     </div>
 
-    <div class="item tabs tabs-secondary tabs-icon-left white-tabs">
-      <a class="tab-item white-tab-text" href="#">
-        <i class="icon ion-thumbsup"></i>
-        Like
-      </a>
-      <a class="tab-item white-tab-text" href="#">
-        <i class="icon ion-chatbox"></i>
-        Comment
-      </a>
-      <a class="tab-item white-tab-text" href="#">
-        <i class="icon ion-share"></i>
-        Share
-      </a>
+    <div class="item tabs tabs-secondary icon-small" id="like_comment_icon">
+      <a class="tab-item item-icon-left" href=""><i class="icon ion-heart" style="font-size:25px"></i></a>
+      <a class="tab-item item-icon-left" href=""><i class="icon ion-ios-chatbubble" style="margin-left:80px;font-size:25px"></i></a>
+      <a class="tab-item item-icon-right"  href=""><i class="icon ion-more" style="font-size:25px"></i></a>
+
     </div>
-    
+
 </div>
